<?xml version="1.0"?>
<package format="2">
  <name>voxblox_planning_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Voxblox Planner</description>

  <author email="p.kremer@uni.lu">Paul Kremer</author>

  <maintainer email="p.kremer@uni.lu">Paul Kremer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
